--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,15 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    
 }
+
+body {
+    background-image: url('path/to/your/image.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
 
 header {
     background-color: #333;
@@ -16,5 +24,12 @@ header {
 
 header h1 {
     font-size: 2em;
+}
+
+#intro img {
+    width: 80%;
+    max-width: 600px;
+    display: block;
+    margin: 20px auto;
 }
 
