--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,11 @@ header h1 {
     font-size: 2em;
 }
 
+#intro {
+    text-align: center;
+    padding: 20px 0;
+}
+
 #intro img {
     width: 80%;
     max-width: 600px;
