--- a/style/style.css
+++ b/style/style.css
@@ -1,48 +1,84 @@
+/* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    line-height: 1.6;
     margin: 0;
     padding: 0;
-    
+    background-color: #f4f4f4;
 }
-
-
-
 
 header {
     background-color: #333;
     color: #fff;
+    padding: 20px;
     text-align: center;
-    padding: 20px 0;
 }
 
-header h1 {
-    font-size: 2em;
-}
-
-#intro {
-    text-align: center;
-    padding: 20px 0;
-}
-
-#intro img {
-    width: 80%;
-    max-width: 600px;
-    display: block;
-    margin: 20px auto;
-}
-
-
-
-button {
-    background-color: #4CAF50; /* Green */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
+section {
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: #fff;
     border-radius: 5px;
-    transition: background-color 0.3s ease; /* Adding smooth transition */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+h2 {
+    color: #333;
+}
+
+p {
+    color: #666;
+    line-height: 1.6;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 10px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table td, table th {
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+/* Custom Styles */
+#intro img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+#service {
+    text-align: justify;
+}
+
+.table-container {
+    overflow-x: auto;
+}
+
+#tanggal {
+    text-align: center;
+}
+
+/* Responsiveness */
+@media (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+    section {
+        padding: 10px;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+}
