--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,6 @@ body {
     
 }
 
-
-
-
 header {
     background-color: #333;
     color: #fff;
@@ -50,5 +47,6 @@ button {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease; /* Adding smooth transition */
+    top:1000px;
 }
 
