--- a/style/style.css
+++ b/style/style.css
@@ -40,13 +40,21 @@ section {
 }
 
 button {
-    background-color: #4CAF50; /* Green */
+    background-color: #777272; /* Green */
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease; /* Adding smooth transition */
-    top:1000px;
 }
 
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
