--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,7 @@ section {
 }
 
 button {
-    background-color: #777272; /* Green */
+    background-color: #33dd58; /* Green */
     color: white;
     padding: 10px 20px;
     border: none;
